<resources>
    <string name="app_name">えしりとり</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="undo_paint">1つもどる</string>
    <string name="clear_paint">ぜんぶけす</string>
    <string name="done_paint">かんせい!</string>
    <string name="title_dialog_paint">タイトルを入力してね!</string>
    <string name="OK_dialog_paint">OK</string>
    <string name="cancel_dialog_paint">Cancel</string>
    <string name="show_previous_pictures">これまでのえをみる</string>
    <string name="Start">はじめから</string>
    <string name="Continue">つづきから</string>
</resources>
