<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rectangle_for_toast">

        <TextView android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/title_dialog_paint"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"/>

        <EditText android:id="@+id/editTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:inputType="textVisiblePassword"/>

        <LinearLayout android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp">

            <Button android:id="@+id/ButtonOKOfDialogDone"
                android:text="@string/OK_dialog_paint"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/selector_bt_paint"/>

            <Button android:id="@+id/ButtonCancelOfDialogDone"
                android:text="@string/cancel_dialog_paint"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/selector_bt_paint"/>

        </LinearLayout>

    </LinearLayout>